Migrate from commons-configuration to commons-configuration2